-fix hide scrollbar

--- a/resources/js/components/flag-phone/flag-phone.scss
+++ b/resources/js/components/flag-phone/flag-phone.scss
@@ -1,60 +1,67 @@
 @import '@/app';
 
 .swift-widget_flagPhone {
-  @extend %swift-widget-input;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  height: 4vh;
-  margin: 1.9vh auto 1.3vh;
-  border-right: none;
+    @extend %swift-widget-input;
+    display:          flex;
+    justify-content:  flex-start;
+    align-items:      center;
+    height:           4vh;
+    margin:           1.9vh auto 1.3vh;
+    border-right:     none;
+    background-color: transparent;
 
-  @include media('m-only') {
-    width: 80% !important;
-    height: 45px;
-    margin: 20px auto 2.4vh;
-    font-size: 2.46vh;
-  }
+    @include media('m-only') {
+        width:     80% !important;
+        height:    45px;
+        margin:    20px auto 2.4vh;
+        font-size: 2.46vh;
+    }
+}
+
+.swift-widget_flagPhone {
+    background-color: transparent !important;
 }
 
 .swift-widget_flagPhone-input {
-  @include swift_placeholder(300, #8D9CB7);
-  height: 4vh;
-  padding-top: 1.5%;
-  border-left: none;
-  border-top: 1px solid #E3ECF5;
-  border-right: 1px solid #E3ECF5;
-  border-bottom: 1px solid #E3ECF5;
-  border-radius: 0 8px 8px 0;
-  width: 100%;
-  outline: none;
-  font-family: Axiforma, sans-serif;
-  font-weight: 500;
-  font-size: 1.4vh;
-  color: $mainDarkBlue;
+    @include swift_placeholder(300, #8D9CB7);
+    height:        4vh;
+    padding-top:   1.5%;
+    border-left:   none;
+    border-top:    1px solid #E3ECF5;
+    border-right:  1px solid #E3ECF5;
+    border-bottom: 1px solid #E3ECF5;
+    border-radius: 0 8px 8px 0;
+    width:         100%;
+    outline:       none;
+    font-family:   Axiforma, sans-serif;
+    font-weight:   500;
+    font-size:     1.4vh;
+    color:         $mainDarkBlue;
 
-  @include media('m-only') {
-    height: 45px;
-    padding-top: 1%;
-    font-size: 13px;
-  }
+    -webkit-appearance: none;
+
+    @include media('m-only') {
+        height:      45px;
+        padding-top: 1%;
+        font-size:   13px;
+    }
 }
 
 .IZ-select__input {
-  border: none !important;
-  outline: none;
+    border:  none !important;
+    outline: none;
 }
 
 .country-flag {
-  max-width: 2.2vh;
-  width: 100%;
-  height: 2vh;
-  margin-right: 48px;
-  @include media('m-only') {
-    max-width: 24px;
-    width: 100%;
-    height: 20px;
-    margin-right: 35px;
-  }
+    max-width:    2.2vh;
+    width:        100%;
+    height:       2vh;
+    margin-right: 48px;
+    @include media('m-only') {
+        max-width:    24px;
+        width:        100%;
+        height:       20px;
+        margin-right: 35px;
+    }
 }
 
