--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,30 +2,40 @@
 @import 'variables';
 @import 'prototypes';
 @import 'mixins';
-
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css");
 
 
 * {
-    margin: 0;
-    padding: 0;
+    margin:     0;
+    padding:    0;
     box-sizing: border-box;
 }
 
 body {
     font-family: 'Axiforma', sans-serif;
-    min-width: 320px;
-    max-width: 1920px;
+    min-width:   320px;
+    max-width:   1920px;
+}
+
+body.swift-widget-hide-scroll {
+    overflow: hidden;
+    zoom:     1 !important;
+}
+
+html.swift-widget-hide-scroll {
+    position: fixed !important;
+    height:   100% !important;
+    width:    100% !important;
 }
 
 .button {
-    display: flex;
+    display:         flex;
     justify-content: center;
-    align-items: center;
-    border-radius: 8px;
-    padding: 0 15px;
-    color: $white;
-    cursor: pointer;
+    align-items:     center;
+    border-radius:   8px;
+    padding:         0 15px;
+    color:           $white;
+    cursor:          pointer;
 
     & > * {
         &::selection {
@@ -38,9 +48,9 @@ body {
     }
 }
 
-
-
-
+input[type=text], input[type=email], textarea {
+    -webkit-appearance: none;
+}
 
 
 
